First, the ability to remotely create .php files and then cross-site-scripting vulnerabilities. Both
are really facets of the same thing - lack of input validation. 0.97b improves this a great deal.

Thanks to Gerry Eisenhaur and Daniel Ricardo dos Santos respectively for their security bug reports.


0.97d
FIXED - MySQL error in table-creation. MySQL 5.6 is fussier.
FIXED - Editor 'delete link' broken


0.97b	FIXED - absolute SCALE definitions didn't support K (thanks wwwdrich)
    FIXED - memory leak in poller code. Memory usage is MUCH lower now.
    FIXED - updated mysql schema commands to use modern ENGINE instead of TYPE;
    FIXED - static datasource plugin honours KILO
    FIXED - check-gdbug.php shouldn't complain about empty ob_flush buffers anymore
    FIXED - SNMP DS should deal better with non-numeric (and blank) return values
    FIXED - NINK colours were exchanged (thanks Deathwing00!)
    FIXED - WriteConfig (i.e. editor) won't 'lose' absolute keyword from 
    FIXED - fixed some function-name clashes with other plugins
    FIXED - PHP 5.3/5.4/strict related errors ("Creating default object from empty value")
    CHANGE - editor snap function improved (snap to *nearest* point) (thanks Andreas Braun)
    CHANGE - the Cacti UI will warn you about fundamental file permissions problems
    CHANGE - editor ignores attempts to rename nodes to have space in names
    CHANGE - Moved all PHP that doesn't need to be web-accessible into lib
    CHANGE - Editor won't deal with config files that don't have a .conf extension
    CHANGE - Manual updates for changes in Cacti, and improvements in styling. Security section added.
    CHANGE - General improvements in input validation and output escaping in editor
    CHANGE - 'External Script' datasource plugin is disabled by default in new installs (NOT upgrades though!)
    ADDED - Caching for cacti data fetched by dsstats and rrdtool/poller_output DS plugins